--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,50 +1,22 @@
 name: safe_perms
-description: "Advanced Android Permission Manager"
-
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
+description: Advanced Android Permission Manager (MAD Lab 3)
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.10.0 <4.0.0'  # Compatible with Dart 3.10.7 & Flutter 3.38.8
+  sdk: '>=3.0.0 <4.0.0'
   flutter: ">=3.10.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^1.0.8
-
-  # ⭐ STATE MANAGEMENT (Essential for SafePerms screens)
   provider: ^6.1.2
-
-  # ⭐ PERMISSIONS (Core SafePerms functionality)
-  permission_handler: ^11.3.1
-
-  # ⭐ LOCAL STORAGE (Schedules, history, settings)
-  shared_preferences: ^2.3.0
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
-
-  # ⭐ NAVIGATION (9 screens from Lab 2)
-  go_router: ^14.2.7
-
-  # ⭐ BACKGROUND TASKS & NOTIFICATIONS (Scheduling)
-  workmanager: ^0.5.2
-  flutter_local_notifications: ^17.2.3
-
-  # ⭐ UI ENHANCEMENTS
-  intl: ^0.19.0          # Date formatting for schedules
-  path_provider: ^2.1.4  # File paths
+  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  flutter_lints: ^6.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
-
-  assets:
-    - assets/
